Fixed spacing between first two sections

--- a/scss/custom/layout/_our-projects.scss
+++ b/scss/custom/layout/_our-projects.scss
@@ -1,6 +1,6 @@
 .our-projects {
 	position: relative;
-	margin-top: 80px;
+	margin-top: 12px;
 	h1 {
 		position: relative;
 		display: table;
